dataset/local/df_check_untrust_flag/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: detect-untrusted-flag
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: detect-untrusted-flag
    kind: Dockerfile
    resources:
      - good-dockerfile
    result: pass
  - policy: detect-untrusted-flag
    kind: Dockerfile
    resources:
      - bad-dockerfile
    result: fail
